feat: Spring AI와 WebFlux를 이용한 AI 일정 생성 기능 구현 (#39)
* refactor: AI 도메인 이벤트 구조 개선 및 명명 규칙 통일

- 기존 이벤트 삭제
  - AiRequestEvent 삭제 (AiChatRequestedEvent로 대체)
  - AiStreamChunkReceivedEvent 삭제 (사용되지 않음)

- 새 이벤트 추가 및 이동
  - AiMessageGeneratedEvent 추가 (ai/domain/event)
    AI 채팅 메시지 생성 완료 이벤트
  - DailyPlanGeneratedEvent 추가 (ai/domain/event)
    AI가 일차별 일정 생성 완료 시 발행
  - AiChatRequestedEvent 추가 (chat/domain/event)
    사용자의 채팅 입력 요청 이벤트

- 이벤트 명명 규칙 통일
  - Requested: 사용자 요청 이벤트
  - Generated: AI 생성 완료 이벤트
  - Saved: DB 저장 완료 이벤트

- 도메인 경계 명확화
  - ai/domain/event: AI가 생성한 결과 이벤트
  - chat/domain/event: 채팅 도메인 요청 이벤트
  - trip/domain/event: 여행 일정 도메인 이벤트

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* refactor: Trip 도메인 DTO 및 이벤트 재구조화

- DTO 패키지 구조 변경 (request/response 분리)
  - DailyPlanDto → DailyPlanCreateRequest (request)
  - DailyPlanDto → DailyPlanResponse (response)
  - ScheduledPlaceDto → ScheduledPlaceCreateRequest (request)
  - ScheduledPlaceDto → ScheduledPlaceResponse (response)
  - TripGenerationRequest 삭제
  - TripPlanCreateRequest 추가
  - TripPlanResponse 추가

- Trip 이벤트 JavaDoc 개선
  - TripPlanGenerationRequestedEvent
  - TripPlanGenerationCompletedEvent
  - TripPlanGenerationErrorEvent
  - TripPlanGenerationCancelledEvent
  - 각 이벤트의 역할과 발행 시점 명확화

- Entity 필드 추가
  - TripPlan: 여행 계획 완료 여부 등
  - ScheduledPlace: 방문 장소 세부 정보

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* feat: AI Agent 및 서비스 레이어 추가

- AI Agent 인터페이스 및 구현체 추가
  - AiroadAgent 인터페이스: 모든 AI 에이전트의 공통 인터페이스
  - ChatAgent: AI 채팅 에이전트 (스켈레톤 구현)
  - TripAgent: 여행 일정 생성 AI 에이전트
    * Spring AI를 활용한 스트리밍 처리
    * NDJSON 파싱으로 일차별 일정 실시간 생성
    * 이벤트 발행 (DailyPlanGenerated, Completed, Error)

- AI 서비스 레이어 구현
  - AiUseCase: AI 유스케이스 인터페이스
  - AiService: AI 서비스 구현체
    * 에이전트 팩토리 패턴으로 동적 에이전트 선택
    * chatAgent, tripAgent 지원

- AI 에러 코드 추가
  - AiErrorCode enum: AI 관련 에러 처리

- 레거시 코드 제거
 